--- a/src/index.css
+++ b/src/index.css
@@ -8,4 +8,6 @@ body {
   background-image: linear-gradient(to left, rgb(27 20 41), rgb(20 15 35));
 }
 
-
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
