--- a/src/style.css
+++ b/src/style.css
@@ -14,7 +14,15 @@ html {
   
     --imp-text-color: #e27815;
   }
-  
+  .white-glassmorphism {
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.5);
+
+  }
+   
+  .white-glassmorphism:hover {
+    transform: rotateX(-5deg);
+    box-shadow: 0 6px 12px rgba(54, 1, 80, 0.5);
+  }
   .purple {
     color: var(--imp-text-color) !important;
   }
@@ -80,7 +88,7 @@ html {
     background-color: #1b1a2ea9 !important;
     transition: all 0.3s ease-out 0s !important;
     box-shadow: 0px 10px 10px 0px rgba(228, 92, 13, 0.171) !important;
-    backdrop-filter: blur(15px) !important;
+    backdrop-filter: blur(5px) !important;
   }
   
   .navbar {
@@ -729,8 +737,9 @@ html {
   .fork-btn-inner {
     line-height: 1.4em !important;
     background-color: #d36145 !important;
-    padding: 0.25rem 1.1rem !important;
+    /* padding: 0.25rem 1.1rem !important; */
     vertical-align: middle !important;
+    
     text-align: center !important;
   }
   
@@ -742,4 +751,6 @@ html {
   .fork-btn-inner::after {
     display: none !important;
   }
-  
+  @tailwind base;
+@tailwind components;
+@tailwind utilities;
